# shiku.world-project

./: .gitignore  README.md  configuration.nix  firewall.nix  helloworld.nix  pre-commit  secrets.nix
shiku-world-home/home/: Cargo.toml  build-old.rs  diesel.toml
shiku-world-home/home/migrations/2022-04-23-115208_create_guest/: down.sql  up.sql
shiku-world-home/home/migrations/2022-05-17-181231_add_secrets_and_joined_info/: down.sql  up.sql
shiku-world-home/home/migrations/2022-06-20-164932_add_discord_roles/: down.sql  up.sql
shiku-world-home/home/migrations/2022-06-26-140115_add_slime_skin_field/: down.sql  up.sql
shiku-world-home/home/schemas/: resources.schema.json
shiku-world-home/home/src/: log_collector.rs  main.rs  websocket_module.rs
shiku-world-home/home/src-old/argument_module/: argument_module.resources.json  def.rs  imp.rs  mod.rs
shiku-world-home/home/src-old/argument_module/game_module/: character_movement.rs  mod.rs
shiku-world-home/home/src-old/lobby_module/: def.rs  imp.rs  lobby_module.resources.json  mod.rs
shiku-world-home/home/src-old/lobby_module/game_module/: mod.rs  module_enter_process.rs
shiku-world-home/home/src-old/login_module/: login.resources.json  mod.rs
shiku-world-home/home/src-old/slime_1_module/: def.rs  imp.rs  mod.rs  slime_1.resources.json
shiku-world-home/home/src-old/slime_1_module/game_module/: cave_opening.rs  guest_movement.rs  mod.rs
shiku-world-home/home/src/conductor_module/: admin_to_system_events.rs  blueprint_helper.rs  def.rs  errors.rs  game_instances.rs  imp.rs  mod.rs
shiku-world-home/home/src/core/: animation.rs  basic_kinematic_character_controller.rs  blending_mode.rs  blueprint.rs  entity_manager.rs  guest.rs  medium_data_storage.rs  mod.rs  module.rs  ring.rs  timer.rs  tween.rs
shiku-world-home/home/src/core/basic_game_module/: mod.rs
shiku-world-home/home/src/core/blueprint/: character_animation.rs  def.rs  imp.rs  mod.rs  resource_cache.rs  resource_loader.rs
shiku-world-home/home/src/core/entity/: def.rs  ecs.rs  imp.rs  mod.rs  physics.rs  render.rs  terrain.rs
shiku-world-home/home/src/core/entity_manager_generation/: crate_game_game_object_enum.rs  def.rs  extract_variants.rs  generate_entity_game_structs.rs  generate_entity_imps.rs  generate_entity_manager_impl.rs  generate_entity_manager_struct.rs  generate_entity_types.rs  generate_specific_entity_manager_impl.rs  generate_variants.rs  get_imports.rs  imp.rs  mod.rs  read_object_types.rs
shiku-world-home/home/src/core/game_instance/: mod.rs
shiku-world-home/home/src/core/game_module_communication/: mod.rs
shiku-world-home/home/src/core/managed_map/: mod.rs
shiku-world-home/home/src/core/module_system/: def.rs  error.rs  imp.rs  mod.rs  script_types.rs  terrain_manager.rs  world.rs
shiku-world-home/home/src/core/rapier_simulation/: def.rs  imp.rs  mod.rs
shiku-world-home/home/src/core/resource_json_generation/: mod.rs
shiku-world-home/home/src/login/: login_manager.rs  mod.rs  twitch_login.rs
shiku-world-home/home/src/persistence_module/: mod.rs  models.rs  schema.rs
shiku-world-home/home/src/resource_module/: def.rs  errors.rs  imp.rs  mod.rs
shiku-world-home/home/src/webserver_module/: def.rs  imp.rs  mod.rs
shiku-world-resources/: Cargo.toml  Dockerfile
shiku-world-resources/src/: main.rs  ws.rs
(+482 files in other folders)
