[package]
name = "shiku-world-resources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
notify = "6.1.1"
tokio = { version = "1.34.0", features = ["full"] }
warp = "0.3.6"
log = "0.4.20"
tokio-stream = "0.1.14"
uuid = { version = "1.5.0", features = ["v4"] }
serde = "1.0.192"
serde_json = "1.0.108"
