[package]
name = "home"
version = "0.2.4"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
local = []

[dependencies]
remove_entity = { path = "../remove_entity" }
tokio = { version = "1.28.1", features = ["full"] }
tungstenite = "0.21.0"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
flume = { version="0.11.0" }
spin_sleep = "1.2.0"
spin_sleep_util = "0.1.0"
chrono = "0.4.24"
rapier2d = { version = "0.19.0", features = [ "simd-stable", "serde-serialize" ] }
rs-snowflake= "0.6.0"
ts-rs="6.2.1"
schemars="0.8.12" 
futures="0.3.28"
log = "0.4.17"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
url = "2.3.1"
warp = "0.3.5"
env_logger = "0.11.3"
dotenv = "0.15.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108" }
serde_with = { version = "3.4.0" }
crossbeam-channel = "0.5.8"
xml-rs = "0.8.11"
notify = { version = "6.1.1", features = ["serde"] }
anyhow = "1.0.71"
thiserror = "1.0.49"
rand = "0.8.5"
codegen = "0.2.0"
tiled= "0.11.1"
convert_case = "0.6.0"
diesel = { version = "2.1.3", features = ["postgres", "serde_json", "r2d2", "chrono"] }
jsonwebtoken = "8.3.0"
smartstring = "1.0.1"
rhai = {version = "1.18.0"}
uuid = { version = "1.5.0", features = ["v4"] }
walkdir = "2.4.0"
futures-util = {version = "0.3.30"}
num = { version = "0.4.2", features = [] }
[build-dependencies]
convert_case = "0.6.0"
